src/objects/Service_Assignment_Personal_Agent__c.object
<CustomObject>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Agent</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Service Assignment Personal Agent</relationshipLabel>
        <relationshipName>Service_Assignment_Personal_Agent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Service Assignment Personal Agent</relationshipLabel>
        <relationshipName>Service_Assignment_Personal_Agent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Service Assignment Personal Agent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Assignment Personal Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Assignment Personal Agent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>